# image_processing

./: .gitignore  CMakeLists.txt  README.md
src/: liveVideo.cpp  main.cpp  video.cpp
